# Robot-Ros-Adapter

./: Dockerfile  README.md
robot_base/: CMakeLists.txt  package.xml
robot_base/include/: logger.h
robot_base/include/robot_base/: http_client.h  robot_base.h
robot_base_test/: CMakeLists.txt  package.xml
robot_base_test/src/: test_node.cpp
